--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             width: 50%;
             height: 45%;
         }
+
         #chart2 {
             position: absolute;
             top: 0;
@@ -35,11 +36,10 @@
         }
 
         #filter {
-            /*float: left;*/
+            float: left;
             position: absolute;
             left: 49%;
             top: 45%;
-
             width: 45%;
             height: 15%;
             background-color: rgba(0,0,0,0.05);
@@ -54,10 +54,10 @@
         #fanwork {
             position: absolute;
             right: 0;
-            margin-top: 60%;
+            bottom: 0;
             /*float: right;*/
             width: 50%;
-            height: 40%;
+            height: 32%;
             overflow-y: scroll;
         }
 
